# prompt_evolve

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/agents/: my-agent.agent.md
app/: cli.py  config.py  web.py
app/gateway/: base.py  matcha_client.py  openai_client.py
app/models/: candidate.py  eval_case.py  round_summary.py  run_result.py  score.py
app/mutations/: __init__.py  base.py  engine.py  operators.py
app/optimization/: beam_search.py  hill_climbing.py  loop.py
app/reporting/: leaderboard.py  report.py
app/runner/: runner.py
app/scoring/: aggregator.py  base.py  deterministic.py  judge.py
app/storage/: artifacts.py  db.py
app/templates/: base.html  candidate_detail.html  candidates.html  dashboard.html  eval_cases.html  rounds.html  run_detail.html  runs.html
data/: scoring_config.json
data/eval_cases/: sample_eval.jsonl
data/prompts/: baseline.json
tests/: conftest.py  test_matcha_client.py  test_multi_turn.py  test_mutations.py  test_runner.py  test_scoring.py  test_selection.py  test_web.py
